# smol-contracts

./: .gitignore  CHEATSHEET  Cargo.toml  Makefile  README.md
contracts/smol/: Cargo.toml  Makefile  snapshot.json
contracts/smol/src/: comet.rs  comet_factory.rs  lib.rs  test.rs
contracts/smol/test_snapshots/test/: test.1.json  test_deploy.1.json  test_mint.1.json
ext/: comet.wasm  comet_factory.wasm
